--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NodeJS, Express, and MongoDB Url Shortening Microservice",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/Renestl/url-shortener#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "mongoose": "^4.8.6",
     "shortid": "^2.2.8",
